# arm_compilation

./: README.md
ArmCompilation/: settings.gradle
ArmCompilation/app/: CMakeLists.txt  build.gradle
ArmCompilation/app/src/main/: AndroidManifest.xml
ArmCompilation/app/src/main/cpp/: arm_test.c  arm_test.h  note.txt
ArmCompilation/app/src/main/cpp/aarch32/: cond_exec.S  test2.S
ArmCompilation/app/src/main/cpp/aarch64/: arm_test.S  test2.S
ArmCompilation/app/src/main/cpp/libyuv/: compare_neon.c  compare_neon64.c  compare_win.c  libyuv_config.h
ArmCompilation/app/src/main/java/com/heaven7/android/compilation/: ArmCompilation.java  MainActivity.java
ArmCompilation/app/src/main/res/layout/: activity_main.xml
ArmCompilation/app/src/main/res/values/: strings.xml
ArmCompilation/gradle/wrapper/: gradle-wrapper.properties
